// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`itemMap should render a apple icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="Apple"
  >
    <AppleIcon
      href="https://apple.com"
    />
  </ForwardRef(Tooltip)>
</div>
`;

exports[`itemMap should render a docs icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="Docs"
  >
    <DocumentScannerIcon
      href="https://docs.com"
    />
  </ForwardRef(Tooltip)>
</div>
`;

exports[`itemMap should render a github icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="Github"
  >
    <GithubIcon
      href="https://github.com"
    />
  </ForwardRef(Tooltip)>
</div>
`;

exports[`itemMap should render a google icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="Google"
  >
    <GoogleIcon
      href="https://google.com"
    />
  </ForwardRef(Tooltip)>
</div>
`;

exports[`itemMap should render a link icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="Link"
  >
    <LinkIcon
      href="https://google.com"
    />
  </ForwardRef(Tooltip)>
</div>
`;

exports[`itemMap should render a linkedin icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="LinkedIn"
  >
    <LinkedinIcon
      href="https://linkedin.com"
    />
  </ForwardRef(Tooltip)>
</div>
`;

exports[`itemMap should render a youtube icon 1`] = `
<div>
  <ForwardRef(Tooltip)
    title="YouTube"
  >
    <YoutubeIcon
      href="https://youtube.com"
    />
  </ForwardRef(Tooltip)>
</div>
`;
